--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["stylelint-config-standard-scss"],
-  "customSyntax": "postcss-html"
+  "customSyntax": "postcss-html",
+  "rules": {
+    "selector-class-pattern": ".*"
+  }
 }
