--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
+    "build": "nuxt build --dotenv .env",
+    "dev": "nuxt dev --dotenv .env.local",
     "lint:code": "eslint .",
     "lint:code:fix": "npm run lint -- --fix",
     "lint:style": "stylelint \"**/*.{scss,css,vue}\" --ignore-path .gitignore",
@@ -17,8 +17,14 @@
     "prepare": "husky || true"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "nuxt": "^3.11.2",
+    "string-encode": "^0.2.2",
     "vue": "^3.4.27",
+    "vue-load-image": "^1.1.0",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
